--- a/.github/workflows/notifyTelegram.yml
+++ b/.github/workflows/notifyTelegram.yml
@@ -57,14 +57,15 @@ jobs:
         id: set_message
         run: |
           MESSAGE=""
+          REPO_NAME=$(echo "${{ inputs.repo_name }}" | cut -d'/' -f2)
           if [ "${{ inputs.event_name }}" == "pull_request" ] && [ "${{ inputs.action }}" == "opened" ]; then
-           MESSAGE+="<b>🆕 #PR${{ inputs.pr_number }}${{ inputs.repo_name }}</b>%0A<i>${{ inputs.pr_title }}</i>%0AReviewers: ${{ inputs.reviewer_logins }}%0AAssignee: ${{ inputs.assignee_logins }}%0ACheck it: <a href='${{ inputs.pr_url }}'>Here</a>"
+           MESSAGE+="<b>🆕 #PR${{ inputs.pr_number }}_$REPO_NAME</b>%0A<i>${{ inputs.pr_title }}</i>%0AReviewers: ${{ inputs.reviewer_logins }}%0AAssignee: ${{ inputs.assignee_logins }}%0ACheck it: <a href='${{ inputs.pr_url }}'>Here</a>"
           elif [ "${{ inputs.event_name }}" == "pull_request_review" ] && [ "${{ inputs.review_state }}" == "changes_requested" ]; then
-           MESSAGE+="<b>⚠️ #PR${{ inputs.pr_number }}${{ inputs.repo_name }}</b>%0AChanges requested by <b>${{ inputs.reviewer_logins }}</b>.%0AReview: <a href='${{ inputs.pr_url }}'>Here</a>"
+           MESSAGE+="<b>⚠️ #PR${{ inputs.pr_number }}_$REPO_NAME</b>%0AChanges requested by <b>${{ inputs.reviewer_logins }}</b>.%0AReview: <a href='${{ inputs.pr_url }}'>Here</a>"
           elif [ "${{ inputs.event_name }}" == "pull_request" ] && [ "${{ inputs.action }}" == "synchronize" ]; then
-           MESSAGE+="<b>🔄 #PR${{ inputs.pr_number }}${{ inputs.repo_name }}</b>%0AUpdated after changes requested.%0AReview the updates: <a href='${{ inputs.pr_url }}'>Here</a>"
+           MESSAGE+="<b>🔄 #PR${{ inputs.pr_number }}_$REPO_NAME</b>%0AUpdated after changes requested.%0AReview the updates: <a href='${{ inputs.pr_url }}'>Here</a>"
           elif [ "${{ inputs.event_name }}" == "pull_request_review" ] && [ "${{ inputs.review_state }}" == "approved" ]; then
-           MESSAGE+="<b>✅ #PR${{ inputs.pr_number }}${{ inputs.repo_name }}</b>%0AApproved by <b>${{ inputs.reviewer_logins }}</b>.%0ACongratulations! 🎉"
+           MESSAGE+="<b>✅ #PR${{ inputs.pr_number }}_$REPO_NAME</b>%0AApproved by <b>${{ inputs.reviewer_logins }}</b>.%0ACongratulations! 🎉"
           fi
 
           echo "MESSAGE=$MESSAGE" >> $GITHUB_ENV
