--- a/.github/workflows/notifyTelegram.yml
+++ b/.github/workflows/notifyTelegram.yml
@@ -57,7 +57,7 @@ jobs:
         id: set_message
         run: |
           MESSAGE=""
-          REPO_NAME=$(echo "${{ inputs.repo_name }}" | cut -d'/' -f2)
+          REPO_NAME=$(echo "${{ github.repository }}" | cut -d'/' -f2 | tr '-' '_')
           if [ "${{ inputs.event_name }}" == "pull_request" ] && [ "${{ inputs.action }}" == "opened" ]; then
            MESSAGE+="<b>🆕 #PR${{ inputs.pr_number }}_$REPO_NAME</b>%0A<i>${{ inputs.pr_title }}</i>%0AReviewers: ${{ inputs.reviewer_logins }}%0AAssignee: ${{ inputs.assignee_logins }}%0ACheck it: <a href='${{ inputs.pr_url }}'>Here</a>"
           elif [ "${{ inputs.event_name }}" == "pull_request_review" ] && [ "${{ inputs.review_state }}" == "changes_requested" ]; then
