--- a/.github/workflows/prNotification.yml
+++ b/.github/workflows/prNotification.yml
@@ -2,7 +2,7 @@ name: Centralized PR Notifications
 
 on:
   pull_request:
-    types: [opened, synchronize, closed]
+    types: [opened, synchronize, closed, review_requested]
   pull_request_review:
     types: [submitted]
 
