--- a/.github/workflows/notifyTelegram.yml
+++ b/.github/workflows/notifyTelegram.yml
@@ -59,7 +59,7 @@ jobs:
           MESSAGE=""
           REPO_NAME=$(echo "${{ github.repository }}" | cut -d'/' -f2 | tr '-' '_')
           if [ "${{ inputs.event_name }}" == "pull_request" ] && [ "${{ inputs.action }}" == "opened" ]; then
-           MESSAGE+="<b>🆕 #PR${{ inputs.pr_number }}_$REPO_NAME</b>%0A<i>${{ inputs.pr_title }}</i>%0AReviewers: ${{ inputs.reviewer_logins }}%0AAssignee: ${{ inputs.assignee_logins }}%0ACheck it: <a href='${{ inputs.pr_url }}'>Here</a>"
+           MESSAGE+="<b>🆕 #PR${{ inputs.pr_number }}_$REPO_NAME</b>%0A<i>${{ inputs.pr_title }}</i>%0A<b>Reviewers:</b> ${{ inputs.reviewer_logins }}%0A<b>Assignee:</b> ${{ inputs.assignee_logins }}%0ACheck it: <b><a href='${{ inputs.pr_url }}'>Here</a></b>"
           elif [ "${{ inputs.event_name }}" == "pull_request_review" ] && [ "${{ inputs.review_state }}" == "changes_requested" ]; then
            MESSAGE+="<b>⚠️ #PR${{ inputs.pr_number }}_$REPO_NAME</b>%0AChanges requested by <b>${{ inputs.reviewer_logins }}</b>.%0AReview: <a href='${{ inputs.pr_url }}'>Here</a>"
           elif [ "${{ inputs.event_name }}" == "pull_request" ] && [ "${{ inputs.action }}" == "review_requested" ]; then
