--- a/.github/workflows/prNotification.yml
+++ b/.github/workflows/prNotification.yml
@@ -21,3 +21,4 @@ jobs:
           reviewer_logins: ${{ join(github.event.pull_request.requested_reviewers.*.login, ', ') }}
           assignee_logins: ${{ join(github.event.pull_request.assignees.*.login, ', ') }}
           repo_name: ${{ github.repository }}
+          review_user_login: ${{ github.event.review.user.login }}
