--- a/.github/workflows/notifyTelegram.yml
+++ b/.github/workflows/notifyTelegram.yml
@@ -60,8 +60,8 @@ jobs:
       - name: Set Notification Message
         id: set_message
         run: |
-          API_URL="https://wiry-fuchsia-snagglefoot.glitch.me/receive"
-          BEARER_TOKEN="YourActualBearerTokenHere"
+          API_URL="https://vm4719950.34ssd.had.wf/prNotifier/sendNotification"
+          BEARER_TOKEN="SuperSecretToken12345#$%!@#"
 
           JSON_PAYLOAD=$(jq -n \
                   --arg event_name "${{ inputs.event_name }}" \
