--- a/.github/workflows/notifyTelegram.yml
+++ b/.github/workflows/notifyTelegram.yml
@@ -81,5 +81,6 @@ jobs:
 
           curl -X POST "$API_URL" \
                    -H "Content-Type: application/json" \
+                   --insecure \
                    -H "Authorization: Bearer $BEARER_TOKEN" \
                    -d "$JSON_PAYLOAD"
