--- a/.github/workflows/notifyTelegram.yml
+++ b/.github/workflows/notifyTelegram.yml
@@ -79,7 +79,8 @@ jobs:
                   '{event_name: $event_name, action: $action, pr_number: $pr_number, pr_title: $pr_title, pr_user: $pr_user, pr_url: $pr_url, merged: $merged, review_state: $review_state, reviewer_logins: $reviewer_logins, assignee_logins: $assignee_logins, repo_name: $repo_name, review_user_login: $review_user_login}')
 
 
-          curl -X  --insecure POST "$API_URL" \
-                   -H "Content-Type: application/json" \
-                   -H "Authorization: Bearer $BEARER_TOKEN" \
-                   -d "$JSON_PAYLOAD"
+          curl --insecure -X POST "$API_URL" \
+               -H "Content-Type: application/json" \
+               -H "Authorization: Bearer $BEARER_TOKEN" \
+               -d "$JSON_PAYLOAD"
+
